--- a/github-api-tutorial-main/index.html
+++ b/github-api-tutorial-main/index.html
@@ -15,10 +15,13 @@
 <body>
 
 <h3 class="text-center mt-5">GitHub API</h3>
-<form id="gitHubForm" class="form-inline mx-auto" style="width: 300px">
-    <input id="usernameInput" class="form-control mb-5" type="text" name="username" placeholder="GitHub Username">
-    <input type="submit" class="btn btn-primary ml-2 mb-5" value="Submit">
-</form>
+<div class="form row">
+    <form id="gitHubForm" class="form-inline mx-auto col justify-content-md-center" style="width: 300px">
+        <input id="usernameInput" class="form-control mb-5" type="text" name="username" placeholder="GitHub Username">
+        <input id="repoInput" class="form-control mb-5" type="text" name="repo" placeholder="GitHub Repository">
+        <input type="submit" class="btn btn-primary ml-2 mb-5" value="Submit">
+    </form>
+</div>
 <ul id="userRepos" class="list-group mx-auto mb-5" style="width: 500px"></ul>
 <script src="app.js"></script>
 </body>
